--- a/app/views/cycling_groups/_light_cycling_group.html.erb
+++ b/app/views/cycling_groups/_light_cycling_group.html.erb
@@ -3,7 +3,7 @@
 	data-lat="<%= cycling_group.coordinates.lat %>" 
 	data-lon="<%= cycling_group.coordinates.lon %>"
 	data-kind="cycling_group"
-	class="cycling-group-light row">
+	class="cycling-group-light item row">
 
 	<div class="details">
 		<div class="pic">
