--- a/app/views/layouts/discover.html.erb
+++ b/app/views/layouts/discover.html.erb
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-	<%= render 'layouts/shared/navbar_maps' %>
+	<%= render 'layouts/shared/navbar' %>
 	
 	<div id="content">
 		<div class="background-logo"></div>	
