--- a/app/views/layouts/routes.html.erb
+++ b/app/views/layouts/routes.html.erb
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-	<%= render 'layouts/shared/navbar_maps' %>
+	<%= render 'layouts/shared/navbar' %>
 	
 	<div id="content-centered">
 		<div class="background-logo"></div>	
