--- a/app/views/profiles/_main_user_info.html.erb
+++ b/app/views/profiles/_main_user_info.html.erb
@@ -15,28 +15,10 @@
 			<p class="username"><%= user.username %></p>
 			<% unless user.city_unset? %>
 				<div class="city" data-lon="<%= @user.city.coordinates.lon %>" data-lat="<%= @user.city.coordinates.lat %>">
-					<p class="name"><span><%= t('user_profiles.views.main.cycling') %></span> <%= user.city.name %></p>
+					<p class="name"><span><%= t('app.profiles.cycling_on') %></span> <%= user.city.name %></p>
 				</div>
 			<% end %>
 			<p class="bio"><%= user.bio %></p>
-		</div>
-	</div>
-	<div class="container-fluid user-actions">
-		<div class="separator"></div>
-		<% if current_user_equals(user) %>
-			<div class="pull-right right-text">
-				<div class="btn-group">
-					<a href="<%= user_settings_path(user.username) %>" class="btn btn-info btn-small pull-right"><i class="icon icon-edit"></i> <%= t('states.edit') %></a>
-				</div>
-			</div>
-		<% end %>
-		<div class="pull-left">
-			<div id="hide-activity-trigger" class="btn-group hidden">
-				<a class="btn btn-info btn-small"><i class="icon icon-chevron-up"></i> <%= t('user_profiles.views.main.actions.activity.hide') %></a>
-			</div>
-			<div id="show-activity-trigger" class="btn-group">
-				<a class="btn btn-info btn-small "><i class="icon icon-chevron-down"></i> <%= t('user_profiles.views.main.actions.activity.show') %></a>
-			</div>
 		</div>
 	</div>
 </div>
