--- a/app/views/profiles/routes/edit.html.erb
+++ b/app/views/profiles/routes/edit.html.erb
@@ -2,20 +2,22 @@
 	<div class="top-spaced"></div>
 	<div class="panel routes edit-mode">
 		<div class="inner-panel inner-panel-big">
+			<%= render :partial => 'shared/notifications' %>
+			
 			<div class="form-container">
-				<h3><%= t('routes.views.form.adjustments') %></h3>
+				<h3><%= t('actions.edit') %></h3>
 				<div class="separator"></div>
 				<br/>
 
 				<div class="path hidden" data-path="<%= @route.to_points_list %>"></div>
 
-				<%= form_for @route, :method => :put do |f| %>
+				<%= form_for [:profiles, @route], :method => :put do |f| %>
 
 					<%= hidden_field_tag :path, '' %>
 
 					<div class="row-fluid">
 						<div class="span3 right-text">
-							<%= f.label :name, t('routes.views.form.name') %>
+							<%= f.label :name, t('activerecord.attributes.route.name') %>
 						</div>
 						<div class="span9">
 							<%= f.text_field :name, :class=> "span12" %>
@@ -24,10 +26,19 @@
 
 					<div class="row-fluid">
 						<div class="span3 right-text">
-							<%= f.label :details, t('routes.views.form.details') %>
+							<%= f.label :details, t('activerecord.attributes.route.details') %>
 						</div>
 						<div class="span9">
 							<%= f.text_area :details, :rows => 5, :class=> "span12" %>
+						</div>
+					</div>
+					
+					<div class="row-fluid">
+						<div class="span3 right-text">
+							<%= f.label :is_public, t('activerecord.attributes.route.is_public') %>
+						</div>
+						<div class="span9">
+							<%= f.check_box :is_public %>
 						</div>
 					</div>
 
@@ -40,12 +51,12 @@
 			</div>
 		</div>
 		<div class="row-fluid actions">
-			<a href="<%= routes_path %>"><%= t('actions.back_arrow').html_safe %></a>
+			<a href="<%= profiles_user_route_path(@user.username, @route) %>"><%= t('actions.back_arrow').html_safe %></a>
 			<span class="togglers">
 				<a href="javascript:void(0);" class="minimize-view"><%= t('actions.toggle.hide') %></a>
 				<a href="javascript:void(0);" class="maximize-view"><%= t('actions.toggle.show') %></a>
 			</span>
-			<span class="activity label label-warning"><%= t('routes.views.form.adjustments') %></span>
+			<span class="activity label label-warning"><%= t('actions.edit') %></span>
 		</div>
 	</div>
 <% end %>
