--- a/app/assets/stylesheets/profiles.css.scss
+++ b/app/assets/stylesheets/profiles.css.scss
@@ -46,11 +46,59 @@
 		color: $wikicleta_orange;
 	}
 	
-	.status {
-		margin-top: 10px !important;
-		padding: 5px !important;
-		text-align: right;
+	.meta-box {
+		
+		.ranking-title {
+			font-size: 11px;
+			padding: 0px;
+			margin: 10px 0px 4px 15px;
+		}
+		
+		ul {
+			margin: 10px;
+			list-style: none;
+			font-size: 11px;
+			
+			li {
+				display: inline-block;
+				margin: 5px;
+				img {
+					display: block;
+					margin-left: auto;
+					margin-right: auto;
+				}
+				
+				p {
+					margin: 5px 0 0 0 !important;
+					padding: 0px;
+					font-weight: bold;
+				}
+			}
+		}
 	}
+	
+	.main-box {
+		margin-top: 5px !important;
+		margin-bottom: 5px !important;
+	}
+	
+	.status-box {
+		margin-top: 10px !important;
+		text-align: right;
+		
+		.by {
+			font-size: 13px;
+			background-color: white;
+			padding: 6px 12px;
+			border-radius: 4px;
+			a {
+				text-decoration: none;
+			}
+		}
+	}
+}
+
+.actions {
 }
 
 #user-profile {
@@ -187,9 +235,6 @@
 	
 	.user-actions {
 		z-index: 99;	
-		.separator {
-			margin-bottom: 10px;
-		}
 		padding: 15px 10px 10px 5px;
 	}
 	
@@ -320,10 +365,6 @@
 			}
 		}
 	}
-}
-
-.separator {
-	border-top: 1px solid #FFDDB1;
 }
 
 .cycling-group-light {
