--- a/app/views/profiles/routes/show.html.erb
+++ b/app/views/profiles/routes/show.html.erb
@@ -1,30 +1,59 @@
 <% content_for :panel do %>	
 	<div class="panel route">
-		
-		<div class="inner-panel inner-panel-centered inner-panel-small">
+		<div class="inner-panel inner-panel-small">
 			<%= render :partial => 'shared/notifications' %>
-			<div class="row-fluid">
-				<div class="span2 centered-text">
-					<%= image_tag('routes_icon.png') %>
+			<div class="side-by-side main-box">
+				<div class="left-side-small centered-text">
+					<p><%= image_tag('routes_icon.png') %></p>
 				</div>
-				<div class="span7">
-					<p class="title"><%= t('app.models.route.singular') %></p>
-					<p class="name"><%= @route.name %></p>
-					<p class="details"><%= @route.details %></p>
-				</div>
-				<div class="span2">
-					<p class="distance-in-kms"><%= '%.2f' % @route.kilometers %></p>
-					<p class="unit">KM</p>
+				<div class="right-side-big">
+					<div class="left-side-big">
+						<p class="title"><%= t('app.models.route.singular') %></p>
+						<p class="name"><%= @route.name %></p>
+						<p class="details"><%= @route.details %></p>
+					</div>
+					<div class="right-side-small">
+						<p class="distance-in-kms"><%= '%.2f' % @route.kilometers %></p>
+						<p class="unit">KM</p>
+					</div>
 				</div>
 			</div>
 		</div>
-		
-		<% if @route.owned_by?(@user) %>
-			<div class="status">
-				<%= link_to t('actions.edit'), profiles_edit_user_route_path(@user.username, @route), :class => 'btn btn-small btn-warning' %>
-				<%= link_to t('actions.delete'), route_path(@route), :method => :delete, :class => "btn btn-danger btn-small", :confirm => t('confirmations.route.delete') %>
+				
+		<div class="status-box">
+			<div class="side-by-side">
+				<div class="left-side">
+					<p>
+					<% if !@user.picture.nil? %>
+						<%= link_to image_tag(@user.picture.image.mini_thumb.url, :class => 'circle circle-30'), user_profile_path(@user.username) %>
+					<% else %>
+						<%= link_to image_tag('user_no_pic.png', :class => 'circle circle-30'), user_profile_path(@user.username) %>
+					<% end %>
+					<span class="by"><%= t('connectives.by') %> <%= link_to @user.username, user_profile_path(@user.username) %> <i>hace 1 mes</i></span>
+					</p>
+				</div>
+				<div class="right-side">
+					<%= link_to "<i class='icon-chevron-up'></i> #{t('actions.toggle.hide')}".html_safe, 'javascript:void(0);', :class => "btn-mini btn-inverse btn hide-extra" %>
+					<%= link_to "<i class='icon-chevron-down'></i> #{t('actions.toggle.show')}".html_safe, 'javascript:void(0);', :class => "btn-mini btn-inverse btn hidden show-extra" %>
+					
+					<%= link_to "<i class='icon-download-alt'></i> #{t('actions.download')}".html_safe, nil, :class => "btn-mini btn-white btn" %>
+				</div>
 			</div>
-		<% end %>
+		</div>
+	</div>
+	
+	<div class="panel actions">
+		<div class="side-by-side">
+			<div class="left-side">
+				<%= link_to t('app.routes.all'), routes_path, :class => 'btn btn-mini btn-info' %>
+			</div>
+			<div class="right-side">
+				<% if @route.owned_by?(@user) %>
+					<%= link_to t('actions.edit'), profiles_edit_user_route_path(@user.username, @route), :class => 'btn btn-mini btn-warning' %>
+					<%= link_to "<i class='icon-remove'></i> #{t('actions.delete')}".html_safe, route_path(@route), :method => :delete, :class => "btn btn-danger btn-mini", :confirm => t('confirmations.route.delete') %>					
+				<% end %>
+			</div>
+		</div>
 	</div>
 	
 	<div id="route-details" 
