--- a/app/assets/stylesheets/shared/main.css.scss
+++ b/app/assets/stylesheets/shared/main.css.scss
@@ -408,6 +408,17 @@ p.empty {
   -moz-border-radius: 40px;
 }
 
+.glossy {
+	font-size: 14px;
+	background-color: rgba(255,255,255,0.8);
+	padding: 6px 12px;
+	border-radius: 4px;
+	a {
+		text-decoration: none;
+		font-size: 12px;
+	}
+}
+
 .side-by-side {
 	margin: 0px !important;
 	padding: 0px !important;
