--- a/app/views/profiles/routes/show.html.erb
+++ b/app/views/profiles/routes/show.html.erb
@@ -2,22 +2,7 @@
 	<div class="panel route">
 		<div class="inner-panel inner-panel-small">
 			<%= render :partial => 'shared/notifications' %>
-			<div class="side-by-side main-box">
-				<div class="left-side-small centered-text">
-					<p><%= image_tag('routes_icon.png') %></p>
-				</div>
-				<div class="right-side-big">
-					<div class="left-side-big">
-						<p class="title"><%= t('app.models.route.singular') %></p>
-						<p class="name"><%= @route.name %></p>
-						<p class="details"><%= @route.details %></p>
-					</div>
-					<div class="right-side-small">
-						<p class="distance-in-kms"><%= '%.2f' % @route.kilometers %></p>
-						<p class="unit">KM</p>
-					</div>
-				</div>
-			</div>
+			<%= render :partial => 'profiles/routes/route_simple', :locals => {:route => @route} %>
 		</div>
 				
 		<div class="status-box">
