--- a/app/views/layouts/routes.html.erb
+++ b/app/views/layouts/routes.html.erb
@@ -5,10 +5,11 @@
 	
   <%= stylesheet_link_tag  "routes" %>
 
-	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+	<script type="text/javascript" src="http://maps.google.com/maps/api/js?libraries=geometry&sensor=true"></script>
 	<%= javascript_include_tag "routes" %>
   <%= csrf_meta_tags %>
 	<%= render 'layouts/shared/fav_icons' %>
+	<%= render 'layouts/shared/mix_panel' %>
 </head>
 
 <body>
