--- a/app/views/routes/new.html.erb
+++ b/app/views/routes/new.html.erb
@@ -5,24 +5,28 @@
 			<%= render :partial => 'shared/notifications' %>
 			
 			<div class="form-container">
-				<h3><i class="icon-edit"></i> <%= t('actions.edit') %></h3>
+				<h3><i class="icon-edit"></i> <%= t('app.routes.actions.creating') %></h3>
+				
 				<div class="separator"></div>
 				<br/>
 
 				<div class="path hidden" data-path="<%= @route.to_points_list %>"></div>
 
-				<%= form_for [:profiles, @route], :method => :put do |f| %>
+				<%= form_for @route do |f| %>
 					<%= render :partial => 'profiles/routes/form', :locals =>  {:f => f} %>
 				<% end %>
 			</div>
 		</div>
-		<div class="row-fluid actions">
-			<a href="<%= profiles_user_route_path(@user.username, @route) %>"><%= t('actions.back_arrow').html_safe %></a>
+		<div class="actions">
+			<%= link_to t('actions.back_arrow').html_safe, :back %>
 			<span class="togglers">
 				<a href="javascript:void(0);" class="minimize-view"><%= t('actions.toggle.hide') %></a>
 				<a href="javascript:void(0);" class="maximize-view"><%= t('actions.toggle.show') %></a>
 			</span>
-			<span class="activity label label-warning"><%= t('actions.edit') %></span>
+			<span class="activity label label-warning"><%= t('app.routes.actions.creating') %></span>			
+			<p class="pull-right">
+				<%= link_to "<i class='icon icon-map-marker'></i> Ubicarme".html_safe, 'javascript:void(0);', :class => 'locate-me' %>
+			</p>
 		</div>
 	</div>
 <% end %>
