--- a/app/assets/stylesheets/profiles.css.scss
+++ b/app/assets/stylesheets/profiles.css.scss
@@ -124,6 +124,13 @@ a {
 		margin-top: 0px !important;
 		margin-bottom: 10px;
 		
+		.note {
+			margin-top: 20px;
+			text-align: center;
+			font-size: 13px;
+			color: $wikicleta_orange;
+		}
+		
 		table {
 			margin: 10px 0 10px 0;
 			
