Solved Issue #27: Fix bad displaying of route updated date

--- a/app/views/profiles/routes/_route_simple.html.erb
+++ b/app/views/profiles/routes/_route_simple.html.erb
@@ -4,7 +4,7 @@
 	</div>
 	<div class="right-side-big">
 		<div class="left-side-big">
-			<p class="title"><%= t('app.models.route.singular') %></p>
+			<p><span class="title"><%= t('app.models.route.singular') %></span> <span class="btn-mini"><i><%= distance_of_time_in_words_to_now(route.updated_at) %></i></span></p>
 			<p class="name"><%= route.name %></p>
 			<p class="details"><%= route.details %></p>
 		</div>
